--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "author": "xudonglei <xudonglei@travelsky.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --config ./config/webpack/dev.js --open",
-    "build:dev": "webpack --config ./config/webpack/dev.js"
+    "start": "webpack --config ./config/webpack/dev.js && webpack-dev-server --config ./config/webpack/dev.js --open --watch",
+    "build": "webpack --config ./config/webpack/build.js"
   },
   "dependencies": {},
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
