--- a/package.json
+++ b/package.json
@@ -7,22 +7,23 @@
   "author": "xudonglei <xudonglei@travelsky.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack --config ./config/webpack/dev.js && webpack-dev-server --config ./config/webpack/dev.js --open --watch",
-    "build": "webpack --config ./config/webpack/build.js"
+    "start": "webpack --config ./config/webpack/webpack.config.development.js && webpack-dev-server --config ./config/webpack/webpack.config.development.js --open --watch",
+    "build": "webpack --config ./config/webpack/webpack.config.production.js"
   },
-  "dependencies": {},
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "7",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
-    "css-loader": "^3.0.0",
+    "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.7.0",
-    "monaco-editor": "^0.17.0",
-    "ts-loader": "^6.0.4",
-    "typescript": "^3.5.2",
-    "typings": "^2.1.1",
-    "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4",
+    "monaco-editor": "^0.14.3",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.7.2"
   }
 }
